Remove Stream#toList() usage from tests to avoid errors in API level 26 tests